# sassy-talks

./: .gitignore  README.md  README_COMMIT_SYNC.md
sassy-talk-clean/: COMPLETE_PLATFORM_STATUS.md  PLATFORM_STATUS.md  PRIVACY_POLICY.md  PROJECT_STATUS.md  README.md  SUBMISSION_READINESS.md  debug_ptt_bt.bat  privacy-policy.html
sassy-talk-clean/android-app/: BUILD.bat  README.md  gradlew  gradlew.bat  local.properties  settings.gradle.kts
sassy-talk-clean/android-app/app/: build.gradle.kts  proguard-rules.pro
sassy-talk-clean/android-app/app/src/main/: AndroidManifest.xml
sassy-talk-clean/android-app/app/src/main/java/com/sassyconsulting/sassytalkie/: BleSignalingService.kt  CellularWebSocketClient.kt  MainActivity.kt  PttCoordinator.kt  RustBridge.kt  SassyTalkNative.kt  TranscriptionBridge.kt  WalkieService.kt
sassy-talk-clean/android-app/app/src/main/java/com/sassyconsulting/sassytalkie/service/: BluetoothTransport.kt
sassy-talk-clean/android-app/app/src/main/java/com/sassyconsulting/sassytalkie/ui/: AppNavigation.kt  DevicePickerScreen.kt  MainScreen.kt  QRAuthScreen.kt  QRScannerView.kt  RainbowRefreshIndicator.kt  TranscriptionFeedScreen.kt  UsersScreen.kt
sassy-talk-clean/android-app/app/src/main/java/com/sassyconsulting/sassytalkie/ui/theme/: Color.kt  Theme.kt
sassy-talk-clean/android-app/app/src/main/res/color/: nav_item_color.xml
sassy-talk-clean/android-app/app/src/main/res/drawable/: ptt_button.xml  ptt_ring.xml
sassy-talk-clean/android-app/app/src/main/res/layout/: activity_main.xml
sassy-talk-clean/android-app/app/src/main/res/menu/: bottom_nav.xml
sassy-talk-clean/android-app/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
sassy-talk-clean/android-app/app/src/main/sassytalkie-android-native-build/: BUILD_RESULTS.md  Cargo.toml
sassy-talk-clean/android-app/app/src/main/sassytalkie-android-native-build/src/: audio.rs  audio_cache.rs  bluetooth.rs  codec.rs  crypto.rs  jni_bridge.rs  lib.rs  permissions.rs  session.rs  state.rs  transport.rs  users.rs  wifi_transport.rs
sassy-talk-clean/android-app/playstore-complete/: PLAY_STORE_LISTING.md
sassy-talk-clean/android-native/: AndroidManifest.xml  COMPLETE.md  Cargo.toml  INTEGRATION_GUIDE.md  MERGE_COMPLETE.md  PRODUCTION_GUIDE.md  README.md  build.sh  sassy-talk.keystore  verify.sh
sassy-talk-clean/android-native/.cargo/: config.toml
sassy-talk-clean/android-native/res/values/: strings.xml
sassy-talk-clean/android-native/res/xml/: network_security_config.xml
sassy-talk-clean/android-native/src/: audio.rs  audio_cache.rs  audio_pipeline.rs  bluetooth.rs  cellular_transport.rs  codec.rs  crypto.rs  jni_bridge.rs  lib.rs  permissions.rs  session.rs  standalone_ui.rs  state.rs  transport.rs  users.rs  wifi_direct.rs  wifi_transport.rs
sassy-talk-clean/cloudflare-worker/: package.json  wrangler.toml
sassy-talk-clean/cloudflare-worker/public/: contact-success.html  index.html  sassy-talk.html  success.html  website-creator.html  winforensics.html
sassy-talk-clean/cloudflare-worker/src/: ptt-relay.js  worker.js
sassy-talk-clean/design-prototypes/lobby-staging/src/: App.tsx  main.tsx
sassy-talk-clean/design-prototypes/lobby/styles/: app.css
sassy-talk-clean/docs/: BUILD.md  DESIGN_DOCUMENT.md  INTEGRITY_SUMMARY.md  INTEGRITY_VERIFICATION.md  SECURITY_FEATURES_COMPLETE.md  Sassy talk.md  WORK_PROFILE_SECURITY.md
sassy-talk-clean/docs/legal/: data-deletion.html  data-safety.md  index.html  play-store-listing.md  privacy-policy.html  support.html  terms-of-service.html
sassy-talk-clean/docs/plans/: 2026-02-23-deployment-readiness.md
sassy-talk-clean/ios-native/: AudioManager.swift  Cargo.toml  ContentView.swift  Info.plist  README.md  SassyTalkie-Bridging-Header.h  SassyTalkieApp.swift  SassyTalkieViewModel.swift  SettingsView.swift  build.sh  cbindgen.toml  generate_headers.sh  project.yml
sassy-talk-clean/ios-native/src/: audio.rs  bluetooth.rs  codec.rs  ffi.rs  lib.rs  protocol.rs  state.rs  transport.rs
sassy-talk-clean/lobby-staging/: package.json
sassy-talk-clean/lobby-staging/src/styles/: app.css
sassy-talk-clean/src/lobby/: App.tsx
sassy-talk-clean/tauri-desktop/: COMPLETE.md  DESKTOP_STATUS.md  QUICK_STATUS.md  README.md  build.sh  index.html  package-lock.json  tsconfig.json
sassy-talk-clean/tauri-desktop/src/: App.tsx  sounds.ts  types.ts
sassy-talk-clean/tauri-desktop/src-tauri/: Cargo.toml  tauri.conf.json
sassy-talk-clean/tauri-desktop/src-tauri/icons/: README.md
sassy-talk-clean/tauri-desktop/src-tauri/src/: audio.rs  codec.rs  commands.rs  constants.rs  lib.rs  main.rs  protocol.rs  tones.rs  ui.rs
sassy-talk-clean/tauri-desktop/src-tauri/src/security/: android.rs  crypto.rs  integrity.rs  mod.rs  profile.rs
sassy-talk-clean/tauri-desktop/src-tauri/src/transport/: bluetooth.rs  discovery.rs  manager.rs  mod.rs  wifi.rs
sassy-talk-clean/tauri-desktop/src/backup/: App.css  App.tsx
sassy-talk-clean/tauri-desktop/src/components/: ChannelSelector.css  ChannelSelector.tsx  DeviceList.css  DeviceList.tsx  Icons.tsx  PTTButton.css  PTTButton.tsx  SettingsPanel.css  SettingsPanel.tsx  StatusBar.css  StatusBar.tsx  UserAvatar.tsx
sassy-talk-clean/tauri-desktop/src/components/lobby/: PeerList.tsx
sassy-talk-clean/tauri-desktop/src/delete/: App.tsx.bak
sassy-talk-clean/tauri-desktop/src/styles/: App.css  lobby.css  retro.css
scripts/: commit-and-sync.ps1  commit-and-sync.sh  setup-git.ps1
