[package]
name = "sassytalkie-ios"
version = "1.0.0"
edition = "2021"
authors = ["Sassy Consulting LLC"]
license = "Proprietary"
description = "SassyTalkie iOS Native Core - PTT Walkie-Talkie"

[lib]
name = "sassytalkie_ios"
crate-type = ["staticlib", "cdylib"]

[dependencies]
# Audio codec
audiopus = { version = "0.3", default-features = false }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Networking
socket2 = "0.5"

# Crypto
aes-gcm = "0.10"
rand = "0.8"
sha2 = "0.10"

# Concurrency
parking_lot = "0.12"

# Logging
log = "0.4"

# Error handling
thiserror = "1.0"

# iOS FFI
core-foundation = "0.9"
core-foundation-sys = "0.8"

[target.'cfg(target_os = "ios")'.dependencies]
# iOS-specific dependencies
objc = "0.2"
block = "0.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
